--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </label>
     <label>
       前回体重（g）:
-      <input type="number" id="previousWeight" required min="0" step="1" />
+      <input type="number" id="previousWeight" required min="0" step="1" font-size: 100%/>
     </label>
     <label>
       今回測定日:
@@ -55,7 +55,7 @@
     </label>
     <label>
       今回体重（g）:
-      <input type="number" id="currentWeight" required min="0" step="1" />
+      <input type="number" id="currentWeight" required min="0" step="1" font-size: 100% />
     </label>
     <button type="submit">計算</button>
   </form>
