--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       width: 100%;
       max-width: 300px;
       margin-top: 5px;
+      font-size: 16px;
     }
     button {
       margin-top: 20px;
@@ -47,7 +48,7 @@
     </label>
     <label>
       前回体重（g）:
-      <input type="number" id="previousWeight" required min="0" step="1" font-size: 100%/>
+      <input type="number" id="previousWeight" required min="0" step="1" />
     </label>
     <label>
       今回測定日:
@@ -55,7 +56,7 @@
     </label>
     <label>
       今回体重（g）:
-      <input type="number" id="currentWeight" required min="0" step="1" font-size: 100% />
+      <input type="number" id="currentWeight" required min="0" step="1" />
     </label>
     <button type="submit">計算</button>
   </form>
