--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </script>
 <footer>
     <div class="container">
-    <p>©︎Kouichi Nagatani</p>
+    <p>©︎Kouichi Nagatani, 2025/06/10</p>
     </div><!-- /.container -->
     </footer>
 </body>
